# electron-mci-cd-player

./: LICENSE  README.md  package-lock.json  package.json
cd-player/: .gitignore  README.md  electron-builder.json5  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
cd-player/public/: license.txt
cd-player/script/: build.mjs  clean.mjs  generate-license-report.mjs  rebuild.js  rebuild.mjs
cd-player/src/common/util/: StringUtil.ts
cd-player/src/main/: CdPlayer.ts  ElectronWindow.ts  cdp.js  cdp.ts  cdpWorker.js  main.js  main.ts
cd-player/src/main/worker/: cdpWorker.js
cd-player/src/preload/: PreloadHelper.ts  preload.js  preload.ts
cd-player/src/renderer/: App.css  App.tsx  index.html  main.tsx  reducer.tsx  renderer.js
cd-player/src/renderer/component/: Main.tsx  main.module.css
cd-player/src/renderer/component/Content/: Content.tsx  content.module.css
cd-player/src/renderer/component/ControlArea/: ControlArea.tsx  controlarea.module.css
cd-player/src/renderer/context/: PlayerContext.tsx  PlayerControlContext.tsx
cd-player/src/renderer/reducer/: ControlReducer.tsx
cd-player/src/renderer/util/: CdPlayerUtil.ts
native/mci/: .gitignore  CMakeLists.txt  CdPlayer.cpp  CdPlayer.h  CdPlayerException.h  CdPlayerUtil.cpp  CdPlayerUtil.h  README.txt  binding.gyp  demo.cpp  index.js  mci.cpp  package-lock.json  package.json  test.js  worker.js
script/: develop.mjs  lint.mjs  package.mjs  setup.mjs
src/main/: main.js
src/preload/: preload.js
src/renderer/: index.html  renderer.js
(+6 files in other folders)
